--- a/src/index.html
+++ b/src/index.html
@@ -63,7 +63,7 @@
         <div class="phone">
           <!-- phones placeholder -->
         </div>
-        <button class="contact-button">Заказать звонок</button>
+        <a class="contact-button" href="#contacts">Заказать звонок</a>
       </div>
     </div>
   </div>
