--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,6 @@
   <title>Bumperball</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-  <link rel="manifest" href="site.webmanifest">
 </head>
 
 <body>
@@ -19,19 +17,19 @@
 <div class="mobile-menu">
   <ul class="mobile-menu__list">
     <li class="mobile-menu__el">
-      <a href="#" class="mobile-menu__link">Что это такое</a>
+      <a href="#emotions" class="mobile-menu__link">Что это такое</a>
     </li>
     <li class="mobile-menu__el">
-      <a href="#" class="mobile-menu__link">Галлерея</a>
+      <a href="#gallery" class="mobile-menu__link">Галлерея</a>
     </li>
     <li class="mobile-menu__el">
-      <a href="#" class="mobile-menu__link">Отзывы</a>
+      <a href="#feedback" class="mobile-menu__link">Отзывы</a>
     </li>
     <li class="mobile-menu__el">
-      <a href="#" class="mobile-menu__link">Цены</a>
+      <a href="#offers" class="mobile-menu__link">Цены</a>
     </li>
     <li class="mobile-menu__el">
-      <a href="#" class="mobile-menu__link">Контакты</a>
+      <a href="#cotacts" class="mobile-menu__link">Контакты</a>
     </li>
   </ul>
 </div>
@@ -46,8 +44,8 @@
           <span class="hamburger__el"></span>
         </div>
         <a class="logo" href="#">
-          <img class="logo-img" src="images\/logo.png" alt="logo"/>
-          <img class="logo-img-small" src="images\/logo-small.png" alt="logo"/>
+          <img class="logo-img" src="images/logo.png" alt="logo"/>
+          <img class="logo-img-small" src="images/logo-small.png" alt="logo"/>
         </a>
       </div>
       <div class="header-center">
@@ -81,7 +79,7 @@
       </div>
     </div>
   </div>
-  <div class="man"><img class="man-img" src="images\/man.png" alt="man" /></div>
+  <div class="man"><img class="man-img" src="images/man.png" alt="man" /></div>
 </div>
 
 <div class="screen emotions" id="emotions">
@@ -165,31 +163,31 @@
       <div class="steps">
         <div class="step">
           <div class="step-img">
-            <img class="step-icon" src="images/conference-icon.png" >
+            <img class="step-icon" src="images/conference-icon.png" alt="conference" />
           </div>
           <p class="step-text">Вы оставляете заявку <br/>на сайте или по телефону </p>
         </div>
         <div class="step">
           <div class="step-img">
-            <img class="step-icon" src="images/calendar-icon.png" >
+            <img class="step-icon" src="images/calendar-icon.png" alt="calendar" />
           </div>
           <p class="step-text">Приезжаете на площадку <br/>в выбранный день </p>
         </div>
         <div class="step">
           <div class="step-img">
-            <img class="step-icon" src="images/form-icon.png" >
+            <img class="step-icon" src="images/form-icon.png" alt="form" />
           </div>
           <p class="step-text">Переодеваетесь в <br/>удобную одежду</p>
         </div>
         <div class="step">
           <div class="step-img">
-            <img class="step-icon" src="images/insruction-icon.png" >
+            <img class="step-icon" src="images/instruction-icon.png" alt="instruction" />
           </div>
           <p class="step-text">Получаете инструктаж <br/>от тренера </p>
         </div>
         <div class="step">
           <div class="step-img">
-            <img class="step-icon" src="images/joy-icon.png" >
+            <img class="step-icon" src="images/joy-icon.png" alt="joy" />
           </div>
           <p class="step-text">Играете в бампербол <br/>и получаете удовольствие</p>
         </div>
@@ -281,7 +279,7 @@
           <div class="request-action">
             <button class="request-btn" type="submit">Оставить заявку</button>
           </div>
-          
+
         </form>
       </div>
     </div>
@@ -316,9 +314,7 @@
 
 
 <script>
-    
   const CUSTOM_MESSAGES = {
-
     ABOUT_US: [
       {
         TITLE: "223",
@@ -391,7 +387,7 @@
       },
     ],
 
-    FEEDBAKS: [
+    FEEDBACK: [
       {
         avatarLink: '1.png',
         name: 'Ольга Ростовская',
@@ -408,7 +404,7 @@
         city: 'Харьков',
         feedback: 'Мне очень понравилось играть в бамперболл это реально круто и помогает развеяться на природе!!! Всем советую!!!',
         socialMedia: [
-          { icon: 'icon-tw', href: '#' },
+          { icon: 'icon-tw',   href: '#' },
           { icon: 'icon-inst', href: '#' },
         ],
       },
@@ -418,8 +414,8 @@
         city: 'Харьков',
         feedback: 'Мне очень понравилось играть в бамперболл это реально круто и помогает развеяться на природе!!! Всем советую!!!',
         socialMedia: [
-          { icon: 'icon-vk', href: '#' },
-          { icon: 'icon-fb', href: '#' },
+          { icon: 'icon-vk',   href: '#' },
+          { icon: 'icon-fb',   href: '#' },
           { icon: 'icon-inst', href: '#' },
         ],
       },
@@ -429,9 +425,9 @@
         city: 'Харьков',
         feedback: 'Мне очень понравилось играть в бамперболл это реально круто и помогает развеяться на природе!!! Всем советую!!!',
         socialMedia: [
-          { icon: 'icon-vk', href: '#' },
-          { icon: 'icon-fb', href: '#' },
-          { icon: 'icon-tw', href: '#' },
+          { icon: 'icon-vk',   href: '#' },
+          { icon: 'icon-fb',   href: '#' },
+          { icon: 'icon-tw',   href: '#' },
           { icon: 'icon-inst', href: '#' },
         ],
       },
@@ -453,14 +449,12 @@
         ],
     },
 
+    // Сообщения что показываются когда отправляется форма.
     FORM: {
       success: 'Спасибо!<br/>Мы свяжемся с Вами в ближайшее время',
       error: 'Что-то пошло не так<br/>попробуйте позже',
     },
-
-
   }
-  
 </script>
 
 </body>
