add gallery images, add clients/partners sections, add feedbacks

--- a/src/index.html
+++ b/src/index.html
@@ -219,6 +219,49 @@
   </div>
 </div>
 
+<div class="screen partners" id="partners">
+  <div class="container">
+    <div class="screen-title">
+      <span class="screen-icon"><i class="icon is-partners"></i></span>
+      <h1 class="heading-title">Наши партнеры</h1>
+    </div>
+    <div class="screen-content icon-set">
+      <img src="images/logo/partners/1.jpg" alt="avatar">
+      <img src="images/logo/partners/2.jpg" alt="avatar">
+      <img src="images/logo/partners/3.jpg" alt="avatar">
+      <img src="images/logo/partners/4.jpg" alt="avatar">
+      <img src="images/logo/partners/5.jpg" alt="avatar">
+      <img src="images/logo/partners/6.jpg" alt="avatar">
+      <img src="images/logo/partners/7.jpg" alt="avatar">
+      <img src="images/logo/partners/8.jpg" alt="avatar">
+      <img src="images/logo/partners/9.jpg" alt="avatar">
+      <img src="images/logo/partners/10.jpg" alt="avatar">
+    </div>
+  </div>
+</div>
+
+<div class="screen clients" id="clients">
+  <div class="container">
+    <div class="screen-title">
+      <span class="screen-icon"><i class="icon is-clients"></i></span>
+      <h1 class="heading-title">Наши клиенты</h1>
+    </div>
+    <div class="screen-content icon-set">
+      <img src="images/logo/clients/1.jpg" alt="avatar">
+      <img src="images/logo/clients/2.jpg" alt="avatar">
+      <img src="images/logo/clients/3.jpg" alt="avatar">
+      <img src="images/logo/clients/4.jpg" alt="avatar">
+      <img src="images/logo/clients/5.jpg" alt="avatar">
+      <img src="images/logo/clients/6.jpg" alt="avatar">
+      <img src="images/logo/clients/7.jpg" alt="avatar">
+      <img src="images/logo/clients/8.jpg" alt="avatar">
+      <img src="images/logo/clients/9.jpg" alt="avatar">
+      <img src="images/logo/clients/10.jpg" alt="avatar">
+      <img src="images/logo/clients/11.jpg" alt="avatar">
+    </div>
+  </div>
+</div>
+
 <div class="screen feedback" id="feedback">
   <div class="container">
     <div class="screen-title">
@@ -405,46 +448,41 @@
 
     FEEDBACK: [
       {
-        avatarLink: '1.png',
-        name: 'Ольга Ростовская',
-        city: 'Харьков',
-        feedback: 'Мне очень понравилось играть в бамперболл это реально круто и помогает развеяться на природе!!! Всем советую!!!',
+        avatarLink: 'bogdan_diachenko.jpg',
+        name: 'Богдан Дяченко',
+        city: 'Москва',
+        feedback: 'Первый раз услышал о нем в 2013, после этого, хотел попробовать, но в Украине его не было, и тут на Travel-Fest, мне на глаза попадаешься он, и я конечно не остался в стороне, а попробовал, это незабываемые ощущения, ощущение свободного падения + смягченный удар об землю (не болезненно, а даже приятно). Пожалуй это из разряда, 1000 вещей, которые стоит попробовать в жизни.',
         socialMedia: [
-          { icon: 'icon-vk', href: '#' },
-          { icon: 'icon-fb', href: '#' },
+          { icon: 'icon-vk', href: 'https://vk.com/dyachenkobogdan' },
         ],
       },
       {
-        avatarLink: '1.png',
-        name: 'Ольга Ростовская',
+        avatarLink: 'elena_baz.jpg',
+        name: 'Елена Базь',
         city: 'Харьков',
-        feedback: 'Мне очень понравилось играть в бамперболл это реально круто и помогает развеяться на природе!!! Всем советую!!!',
+        feedback: 'Спасибо KAVA за очень активное воскресенье 9.08.2015г! Было очень весело! Мы успели за один день поиграть в бампербол, волейбол, поправать, понырять, попробовать ходить и прыгать на джамперах, попрыгать на батутах, покататься на лодке, позагорать и даже поиграть в "корову"! Была очень дружественная и позитивная атмосфера, все было МЕГА КРУТО! Так держать! Хотим добавки! 👍 👍 👍',
         socialMedia: [
-          { icon: 'icon-tw',   href: '#' },
-          { icon: 'icon-inst', href: '#' },
+          { icon: 'icon-vk', href: 'https://vk.com/id199664520' },
         ],
       },
       {
-        avatarLink: '1.png',
-        name: 'Ольга Ростовская',
-        city: 'Харьков',
-        feedback: 'Мне очень понравилось играть в бамперболл это реально круто и помогает развеяться на природе!!! Всем советую!!!',
+        avatarLink: 'sveta_citko.jpg',
+        name: 'Света Цепко',
+        city: 'Киев',
+        feedback: 'Пригласила ребят на свой ДР, очень круто, зрелищно и весело получилось. Координаторы очень приветливые ) Гости остались в восторге) Совет: не забудьте сменную футболку :)',
         socialMedia: [
-          { icon: 'icon-vk',   href: '#' },
-          { icon: 'icon-fb',   href: '#' },
-          { icon: 'icon-inst', href: '#' },
+          { icon: 'icon-vk', href: 'https://vk.com/ilovetsepko' },
         ],
       },
       {
-        avatarLink: '1.png',
-        name: 'Ольга Ростовская',
-        city: 'Харьков',
-        feedback: 'Мне очень понравилось играть в бамперболл это реально круто и помогает развеяться на природе!!! Всем советую!!!',
+        avatarLink: 'serhey_ostroushko.jpg',
+        name: 'Сергей Остроушко',
+        city: 'Львов',
+        feedback: 'Очень здорово, что активные организации объединяются, где проводят совместно активно и здорово время! Чем больше будет ребят с подобными взглядами и интересами, тем здоровее будет молодежь и подрастающее поколение! )) Спасибо Юрию и ребятам из команды KAVA за данное мероприятие! Было круто! ))',
         socialMedia: [
-          { icon: 'icon-vk',   href: '#' },
-          { icon: 'icon-fb',   href: '#' },
-          { icon: 'icon-tw',   href: '#' },
-          { icon: 'icon-inst', href: '#' },
+          { icon: 'icon-vk', href: 'https://vk.com/id_seos' },
+          { icon: 'icon-inst', href: 'http://instagram.com/sergey_ostroushko' },
+          { icon: 'icon-tw',   href: 'https://twitter.com/SeoSTwit' },
         ],
       },
     ],
